--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirect Page</title>
     <script>
-        window.location.href = "https://messyadvance.com/bc3bVm0yP.3Ypivqb/mLVwJJZKD/0j1xNVTAgNy_NMzekx0tLWTlUL1tO-D_IG3VOeTlUE";
+        window.location.href = "https://messyadvance.com/bl3.Vv0/P/3/p/vwbwmxVbJVZHDf0H1YN_T/c_zXMvD/ML0nLrTtUQ1VNgz/MywqMgz-Up";
     </script>
 </head>
 <body>
-    <p>If it doesn't redirect automatically, click it <a href="hhttps://messyadvance.com/bc3bVm0yP.3Ypivqb/mLVwJJZKD/0j1xNVTAgNy_NMzekx0tLWTlUL1tO-D_IG3VOeTlUE">here</a>.</p>
+    <p>If it doesn't redirect automatically, click it <a href="https://messyadvance.com/bl3.Vv0/P/3/p/vwbwmxVbJVZHDf0H1YN_T/c_zXMvD/ML0nLrTtUQ1VNgz/MywqMgz-Up">here</a>.</p>
 </body>
 </html>
