--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
             window.location.href = "https://heartyquit.com/bL3VVd0.Pl3cpivrbxmmVAJZZnDA0M1tN/T/gVyvN-zlku0kLqT/Ub1/OID_IU3gOSTkU-";
         }
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6H3BDPZ0JE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6H3BDPZ0JE');
+</script>
 </head>
 <body>
     <p>If it doesn't redirect automatically, click it <a href="https://heartyquit.com/bL3VVd0.Pl3cpivrbxmmVAJZZnDA0M1tN/T/gVyvN-zlku0kLqT/Ub1/OID_IU3gOSTkU-">here</a>.</p>
