--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirect Page</title>
+    <script src="block1.js"></script>
+    <script src="sukses.js"></script>
     <script>
         function isWebView() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
